# esh

./: CMakeLists.txt  LICENSE  Makefile  README.md  app.rc  esh.json  resources.rc
Esh/src/: Commands.cpp  Engine.cpp  Error.cpp  Lexer.cpp  Parser.cpp  Shell.cpp  Unicode.cpp  main.cpp
Esh/src/headers/: Commands.hpp  ConsoleColor.hpp  Engine.hpp  Error.hpp  Lexer.h  Lexer.hpp  Result.hpp  Shell.h  Shell.hpp  Unicode.hpp
src/: Commands.cpp  Engine.cpp  Error.cpp  Lexer.cpp  Parser.cpp  Shell.cpp  main.cpp
src/consoleOperations/: ConsoleInput.cpp  ConsoleInput.hpp  LineOperations.cpp  LineOperations.hpp
src/core/: Commands.cpp  Engine.cpp  Error.cpp  Lexer.cpp  Parser.cpp  Shell.cpp  Token.cpp  Unicode.cpp  main.cpp
src/env/: EnvironmentCommands.cpp  EnvironmentCommands.hpp
src/execution/: Execution.cpp  Execution.hpp
src/file/: FileCommands.cpp  FileCommands.hpp
src/headers/: Commands.hpp  Console.hpp  Engine.hpp  Error.hpp  Helper.hpp  Lexer.hpp  Parser.hpp  Result.hpp  Shell.hpp  Token.hpp  Unicode.hpp
src/history/: HistoryBuffer.cpp  HistoryBuffer.hpp  HistoryManager.cpp  HistoryManager.hpp  HistoryStorage.cpp  HistoryStorage.hpp
src/platform/: AppDataPath.cpp  AppDataPath.hpp
src/process/: ProcessCommands.cpp  ProcessCommands.hpp
src/shell/: ShellCommands.cpp  ShellCommands.hpp
src/system/: SystemCommands.cpp  SystemCommands.hpp
